@@ -37,7 +37,7 @@ typedef struct HICON__* HICON;
 #elif PLATFORM(QT)
 #include <QIcon>
 #elif PLATFORM(GTK)
-#include <gdk/gdk.h>
+typedef struct _GdkPixbuf GdkPixbuf;
 #endif
 
 namespace WebCore {
