@@ -28,7 +28,6 @@
 #define RenderThemeGdk_h
 
 #include "RenderTheme.h"
-#include "GraphicsContext.h"
 
 #include <gtk/gtk.h>
 
