@@ -1,5 +1,11 @@
 2008-10-03  Alp Toker  <alp@nuanti.com>
 
+        Remove some left-over GTK+ includes. No change in functionality.
+
+        * webkit/webkitwebhistoryitem.h:
+
+2008-10-03  Alp Toker  <alp@nuanti.com>
+
         Build fix following r37234. Remove addToDirtyRegion from the header
         too.
 
